--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -12,11 +12,13 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".NoDslActivity" />
         <activity android:name=".DslActivity" />
+        <activity android:name=".ExpandableActivity"></activity>
     </application>
 
 </manifest>
