--- a/example/build.gradle
+++ b/example/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.github.caoddx.easyadapter.example"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,9 +30,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    // support
+    def SupportVersion = '28.0.0'
+    implementation "com.android.support:appcompat-v7:$SupportVersion"
+    implementation "com.android.support:support-v4:$SupportVersion"
+    implementation "com.android.support:recyclerview-v7:$SupportVersion"
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
 
     implementation project(path: ':easyadapter')
 }
